added a launch script and tie UI into backend with redirect

--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,7 @@
 {
     "database": "mysql database to connect to",
     "username": "username for above database",
-    "password": "password for above username"
+    "password": "password for above username",
+    "route": "domain name or ip address of the server"
 }
 
