--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-numeric-input": "^2.0.7",
+    "react-select": "^1.0.0-rc.5",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.3"
   },
@@ -18,4 +21,3 @@
     "eject": "react-scripts eject"
   }
 }
-
