--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-numeric-input": "^2.0.7",
+    "react-router": "^4.1.1",
     "react-select": "^1.0.0-rc.5",
+    "reactjs-localstorage": "0.0.5",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.3"
   },
