--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "semantic-ui-react": "^0.68.3"
   },
   "devDependencies": {
+    "chai": "^4.0.2",
     "react-scripts": "0.9.5"
   },
   "scripts": {
