--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^15.5.4",
     "react-numeric-input": "^2.0.7",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-select": "^1.0.0-rc.5",
     "reactjs-localstorage": "0.0.5",
     "semantic-ui-css": "^2.2.10",
