--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "chai": "^4.0.2",
+    "highcharts": "^5.0.12",
     "react-scripts": "0.9.5"
   },
   "scripts": {
