update to python 3

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,12 @@
-# Use an official Python runtime as an image
-FROM python:3.7
+FROM node:8
 ENV DOCKERIZE_VERSION v0.6.0
 RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 WORKDIR /app
 
-# Install any needed packages specified in requirements.txt
-COPY ./requirements.txt /app
-RUN pip install -r requirements.txt
+COPY ./package.json /app
+RUN npm install
 COPY ./ /app
 
-CMD dockerize -wait tcp://sql:3306 && python api.py
+CMD dockerize -wait tcp://sql:3306 && npm start
